[package]
name = "lure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
mimalloc = "0.1.34"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.7.2"
valence = { git = "https://github.com/valence-rs/valence"}
valence_protocol = { git = "https://github.com/valence-rs/valence", features = ["compression"] }