[package]
name = "lure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bevy_ecs = "0.9.1"
bytes = "1.4.0"
mimalloc = "0.1.34"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha2 = "0.10.6"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.7.2"
tracing = "0.1.37"
valence = { git = "https://github.com/valence-rs/valence"}
valence_protocol = { git = "https://github.com/valence-rs/valence", features = ["compression"] }