[package]
name = "lure"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.7.5"
anyhow = "1.0.70"
base64 = "0.21.0"
bevy_ecs = "0.10.0"
bytes = "1.4.0"
cfb8 = "0.7.1"
flate2 = "1.0.25"
image-meta = "0.1.2"
mimalloc = "0.1.34"
num = "0.4.0"
rand = "0.8.5"
rsa = "0.8.2"
rsa-der = "0.3.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
sha1= "0.10.5"
sha2 = "0.10.6"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.7.3"
tracing = "0.1.37"
valence = { git = "https://github.com/valence-rs/valence"}
valence_protocol = { git = "https://github.com/valence-rs/valence", features = ["compression", "encryption"] }

[dependencies.reqwest]
version = "0.11.12"
default-features = false
features = ["rustls-tls", "json"]